--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,11 @@
             "Comodojo\\Exception\\": "src/Exception",
             "Comodojo\\Httprequest\\": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
+    },
+    "suggest": {
+        "ext-curl": "Make requests using curl instead of stream"
     }
 }
