--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "comodojo/httprequest",
-    "description": "HTTP request library for comodojo",
-    "license": "GPL-3.0+",
+    "description": "HTTP request library",
+    "license": "MIT",
     "type": "library",
     "keywords": [
         "comodojo",
@@ -26,6 +26,10 @@
             "Comodojo\\Exception\\": "src/Exception",
             "Comodojo\\Httprequest\\": "src"
         }
+    },
+    "require": {
+        "php": ">=5.3.0",
+        "league/url": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
