new methods and more
new unsetHeader
getHeaders now public
better commenting
ready for scrutinizer
more tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,8 @@ php:
 before_script:
   - composer install --prefer-source
 
-script: ./vendor/bin/phpunit
+script: ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+
+after_script:
+  - bash -c 'if [[ "$TRAVIS_PHP_VERSION" != "hhvm" && "$TRAVIS_PHP_VERSION" != 7* ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi;'
+
