--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "ntlm",
         "basic"
     ],
-    "homepage": "http://comodojo.org",
+    "homepage": "https://comodojo.org",
      "support": {
         "issues": "https://github.com/comodojo/httprequest/issues"
     },
@@ -24,16 +24,17 @@
     ],
     "autoload": {
         "psr-4": {
-            "Comodojo\\Exception\\": "src/Exception",
             "Comodojo\\Httprequest\\": "src"
         }
     },
     "require": {
         "php": ">=5.3.0",
-        "league/url": "~3.0"
+        "league/url": "~3.0",
+        "comodojo/exceptions": "@stable"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "scrutinizer/ocular": "~1.1"
     },
     "suggest": {
         "ext-curl": "Make requests using curl instead of stream"
