--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: php
 
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
+  - 7.1
+  - 7.2
   - hhvm
+
+matrix:
+  allow_failures:
+    - php: hhvm
 
 before_script:
   - composer install --prefer-source
@@ -14,4 +20,3 @@ script: ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
 
 after_script:
   - bash -c 'if [[ "$TRAVIS_PHP_VERSION" != "hhvm" && "$TRAVIS_PHP_VERSION" != 7* ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi;'
-
