--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,10 @@
             "Comodojo\\Httprequest\\": "src"
         }
     },
-    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
         "league/url": "^3.0",
-        "comodojo/exceptions": "dev-master"
+        "comodojo/exceptions": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
