--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require": {
         "php": ">=5.3.0",
         "league/url": "^3.0",
-        "comodojo/exceptions": "^1.0"
+        "comodojo/exceptions": "dev-exceptions_u7320"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
