--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
             "Comodojo\\Httprequest\\": "src"
         }
     },
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
         "league/url": "^3.0",
