--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pmarcelli/httprequest",
+    "name": "comodojo/httprequest",
     "description": "HTTP request library",
     "license": "MIT",
     "type": "library",
@@ -31,7 +31,7 @@
     "require": {
         "php": ">=5.3.0",
         "league/url": "^3.0",
-        "pmarcelli/exceptions": "dev-exceptions_u7320"
+        "comodojo/exceptions": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
